[Fix] 카드 컴포넌트 overflow 이슈발생으로 인한 여백 추가

--- a/src/pages/main-page/main-page.css
+++ b/src/pages/main-page/main-page.css
@@ -112,6 +112,7 @@
         column-gap: var(--gap-16, 1rem);
         margin-block-end: 3.25rem;
         padding-inline: var(--padding-14, 0.875rem);
+        padding-block-end: 4rem;
         overflow-x: auto;
         overflow-y: hidden;
         &::-webkit-scrollbar {
